# oneAPI-samples

DirectProgramming/C++SYCL/DenseLinearAlgebra/guided_jacobiCudaGraphs_SYCLMigration/: sample.json
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/cholesky_inversion/src/: CMakeLists.txt  cholesky_inversion.hpp  cholesky_inversion_demo.cpp
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/db/src/: CMakeLists.txt  db.cpp  dbdata.hpp
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/db/src/db_utils/: fifo_sort.hpp
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/db/src/query11/: pipe_types.hpp  query11_kernel.cpp
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/eigen/b/: CMakeCache.txt  Makefile  cmake_install.cmake
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/eigen/src/: CMakeLists.txt  eigen.hpp  eigen_demo.cpp
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/matmul/: CMakeLists.txt
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/mvdr_beamforming/src/: BackwardSubstitution.hpp  ForwardSubstitution.hpp
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/pca/src/: pca.hpp
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/qrd/: CMakeLists.txt
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/qrd/src/: CMakeLists.txt  memory_transfers.hpp  qrd.hpp  qrd_demo.cpp
DirectProgramming/C++SYCL_FPGA/Tutorials/Features/ac_fixed/: README.md
DirectProgramming/C++SYCL_FPGA/include/: streaming_cholesky.hpp  streaming_covariance_matrix.hpp  streaming_eigen.hpp  streaming_qrd.hpp  streaming_qrd_interleaved.hpp
DirectProgramming/DPC++FPGA/ReferenceDesigns/anr/: CMakeLists.txt  sample.json
DirectProgramming/DPC++FPGA/ReferenceDesigns/anr/src/: CMakeLists.txt
DirectProgramming/DPC++FPGA/ReferenceDesigns/board_test/: CMakeLists.txt  sample.json
DirectProgramming/DPC++FPGA/ReferenceDesigns/board_test/src/: CMakeLists.txt
DirectProgramming/DPC++FPGA/ReferenceDesigns/cholesky/: CMakeLists.txt  sample.json
DirectProgramming/DPC++FPGA/ReferenceDesigns/cholesky/src/: CMakeLists.txt
DirectProgramming/DPC++FPGA/ReferenceDesigns/cholesky_inversion/: CMakeLists.txt  sample.json
DirectProgramming/DPC++FPGA/ReferenceDesigns/cholesky_inversion/src/: CMakeLists.txt
DirectProgramming/DPC++FPGA/ReferenceDesigns/crr/: CMakeLists.txt  sample.json
DirectProgramming/DPC++FPGA/ReferenceDesigns/crr/src/: CMakeLists.txt
DirectProgramming/DPC++FPGA/ReferenceDesigns/db/: CMakeLists.txt  sample.json
DirectProgramming/DPC++FPGA/ReferenceDesigns/db/src/: CMakeLists.txt
DirectProgramming/DPC++FPGA/ReferenceDesigns/decompress/: CMakeLists.txt  sample.json
DirectProgramming/DPC++FPGA/ReferenceDesigns/decompress/src/: CMakeLists.txt
DirectProgramming/DPC++FPGA/ReferenceDesigns/gzip/: CMakeLists.txt  sample.json
DirectProgramming/DPC++FPGA/ReferenceDesigns/gzip/src/: CMakeLists.txt
DirectProgramming/DPC++FPGA/ReferenceDesigns/matmul/: README.md  sample.json
DirectProgramming/DPC++FPGA/ReferenceDesigns/matmul/src/: CMakeLists.txt  matmul.hpp  matmul_demo.cpp  streaming_matmul.hpp
DirectProgramming/DPC++FPGA/ReferenceDesigns/merge_sort/: CMakeLists.txt  sample.json
DirectProgramming/DPC++FPGA/ReferenceDesigns/merge_sort/src/: CMakeLists.txt
DirectProgramming/DPC++FPGA/ReferenceDesigns/mvdr_beamforming/: CMakeLists.txt  sample.json
DirectProgramming/DPC++FPGA/ReferenceDesigns/mvdr_beamforming/src/: CMakeLists.txt
DirectProgramming/DPC++FPGA/ReferenceDesigns/qrd/: CMakeLists.txt  sample.json
DirectProgramming/DPC++FPGA/ReferenceDesigns/qrd/src/: CMakeLists.txt  memory_transfers.hpp  qrd.hpp  qrd_demo.cpp
DirectProgramming/DPC++FPGA/ReferenceDesigns/qri/: CMakeLists.txt  sample.json
DirectProgramming/DPC++FPGA/ReferenceDesigns/qri/src/: CMakeLists.txt
DirectProgramming/DPC++FPGA/Tutorials/DesignPatterns/autorun/: CMakeLists.txt  sample.json
DirectProgramming/DPC++FPGA/Tutorials/DesignPatterns/buffered_host_streaming/: CMakeLists.txt  sample.json
DirectProgramming/DPC++FPGA/Tutorials/DesignPatterns/compute_units/: CMakeLists.txt  sample.json
DirectProgramming/DPC++FPGA/Tutorials/DesignPatterns/double_buffering/: CMakeLists.txt  sample.json
DirectProgramming/DPC++FPGA/Tutorials/DesignPatterns/explicit_data_movement/: CMakeLists.txt  sample.json
DirectProgramming/DPC++FPGA/Tutorials/DesignPatterns/io_streaming/: CMakeLists.txt  sample.json
DirectProgramming/DPC++FPGA/Tutorials/DesignPatterns/loop_carried_dependency/: CMakeLists.txt  sample.json
DirectProgramming/DPC++FPGA/Tutorials/DesignPatterns/n_way_buffering/: CMakeLists.txt  sample.json
DirectProgramming/DPC++FPGA/Tutorials/DesignPatterns/onchip_memory_cache/: CMakeLists.txt  sample.json
DirectProgramming/DPC++FPGA/Tutorials/DesignPatterns/optimize_inner_loop/: CMakeLists.txt  sample.json
DirectProgramming/DPC++FPGA/Tutorials/DesignPatterns/pipe_array/: CMakeLists.txt  sample.json
DirectProgramming/DPC++FPGA/Tutorials/DesignPatterns/shannonization/: CMakeLists.txt  sample.json
DirectProgramming/DPC++FPGA/Tutorials/DesignPatterns/simple_host_streaming/: CMakeLists.txt  sample.json
DirectProgramming/DPC++FPGA/Tutorials/DesignPatterns/triangular_loop/: CMakeLists.txt  sample.json
DirectProgramming/DPC++FPGA/Tutorials/DesignPatterns/zero_copy_data_transfer/: CMakeLists.txt  sample.json
DirectProgramming/DPC++FPGA/Tutorials/Features/ac_fixed/: CMakeLists.txt  README.md  sample.json
DirectProgramming/DPC++FPGA/Tutorials/Features/ac_int/: CMakeLists.txt  README.md  sample.json
DirectProgramming/DPC++FPGA/Tutorials/Features/dsp_control/: CMakeLists.txt  sample.json
DirectProgramming/DPC++FPGA/Tutorials/Features/fpga_reg/: CMakeLists.txt  sample.json
DirectProgramming/DPC++FPGA/Tutorials/Features/loop_unroll/: CMakeLists.txt  README.md  sample.json
DirectProgramming/DPC++FPGA/Tutorials/Features/loop_unroll/src/: CMakeLists.txt  loop_unroll.cpp
DirectProgramming/DPC++FPGA/Tutorials/Tools/dynamic_profiler/: CMakeLists.txt  sample.json
DirectProgramming/DPC++FPGA/Tutorials/Tools/dynamic_profiler/src/: CMakeLists.txt
DirectProgramming/DPC++FPGA/include/: CMakeLists.txt  streaming_qrd.hpp
(+87 files in other folders)
